cobalt/cobalt-backup.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cobalt-backup
  namespace: cobalt
  labels:
    app: cobalt-backup
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: cobalt-backup
  template:
    metadata:
      labels:
        app: cobalt-backup
    spec:
      containers:
        - name: cobalt-api
          image: ghcr.io/zimpatrick/cobalt:staging@sha256:a5514bc0e88e3dd1a1e9c2749dbff72acaa8b0f0adcaa3c9a5944c5561bca624
          volumeMounts:
            - name: cobalt-files
              mountPath: /cookies.json
              subPath: cookies.json
            - name: cobalt-files
              mountPath: /keys.json
              subPath: keys.json
              readOnly: true
          ports:
            - containerPort: 9000
              name: http
          livenessProbe:
            httpGet:
              path: /
              port: 9000
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 2
          readinessProbe:
            httpGet:
              path: /
              port: 9000
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            limits:
              memory: "512Mi"
              cpu: "750m"
            requests:
              memory: "256Mi"
              cpu: "50m"
      volumes:
        - name: cobalt-files
          secret:
            secretName: cobalt-files
---
apiVersion: v1
kind: Service
metadata:
  name: cobalt-backup
  namespace: cobalt
spec:
  selector:
    app: cobalt-backup
  ports:
    - port: 9000
      targetPort: 9000
      name: http
  type: ClusterIP
